--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.26)
 
-project(MediaPlayer VERSION 0.1 LANGUAGES CXX)
+project(QtMediaPlayer VERSION 0.1 LANGUAGES CXX)
 
 # 配置通用编译
 set(CMAKE_AUTOMOC ON)
@@ -13,13 +13,13 @@ find_package(Qt6 6.5 REQUIRED COMPONENTS Quick)
 
 qt_standard_project_setup(REQUIRES 6.5)
 
-qt_add_executable(appMediaPlayer
+qt_add_executable(appQtMediaPlayer
     main.cpp
     Resources.qrc
 )
 
 # 设置版本号
-add_definitions(-DVERSION=1,0,0,0)
+add_definitions(-DVERSION=1,0,6,0)
 
 # 获取文件路径分隔符（解决执行命令的时候有些平台会报错）
 file(TO_CMAKE_PATH "/" PATH_SEPARATOR)
@@ -46,16 +46,16 @@ endforeach(filepath)
 #endforeach(filepath)
 
 # 添加qml模块
-qt_add_qml_module(appMediaPlayer  # 这里为项目名
-    URI MediaPlayer   # 项目名去掉前缀app
+qt_add_qml_module(appQtMediaPlayer  # 这里为项目名
+    URI QtMediaPlayer   # 项目名去掉前缀app
     VERSION 1.0
     QML_FILES ${qml_files}
     RESOURCES ${resource_files}
 )
 
-target_compile_features(appMediaPlayer PRIVATE cxx_std_20)
+target_compile_features(appQtMediaPlayer PRIVATE cxx_std_20)
 
-set_target_properties(appMediaPlayer PROPERTIES
+set_target_properties(appQtMediaPlayer PROPERTIES
     AUTORCC TRUE
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
@@ -65,12 +65,12 @@ set_target_properties(appMediaPlayer PROPERTIES
 )
 
 # 链接库
-target_link_libraries(appMediaPlayer
+target_link_libraries(appQtMediaPlayer
     PRIVATE
         Qt6::Quick
 )
 
-install(TARGETS appMediaPlayer
+install(TARGETS appQtMediaPlayer
     BUNDLE DESTINATION .
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
@@ -130,7 +130,7 @@ install(TARGETS appMediaPlayer
 
 
 
-#qt_add_executable(MediaPlayer)  //Creates and finalizes an application target of a platform-specific type.
+#qt_add_executable(QtMediaPlayer)  //Creates and finalizes an application target of a platform-specific type.
 #This command performs the following tasks:
 #    1. Create a CMake target of the appropriate type for the target platform.
 #    2. Link the target to the Qt::Core library.
@@ -146,7 +146,7 @@ install(TARGETS appMediaPlayer
 # find_package(Qt6 REQUIRED COMPONENTS Core Quick)
 # @endif
 
-# target_sources(appMediaPlayer
+# target_sources(appQtMediaPlayer
 #     PRIVATE
 #         main.cpp
 #         qml.qrc
@@ -158,4 +158,4 @@ install(TARGETS appMediaPlayer
 #         
 # )
 
-# qt_import_qml_plugins(MediaPlayer)
+# qt_import_qml_plugins(QtMediaPlayer)
